# dw_audit_bot

./: .gitignore  LICENSE  README.md  flake.nix  main.py  pyproject.toml
bot/: __init__.py  __main__.py  audit_model.py  constants.py  converters.py  database.py  errors.py  utils.py
bot/plugins/: audit_commands.py  commands.py  database_commands.py
