[project]
name = "dw_audit_bot"
version = "0.0.1"
dependencies = [
    "hikari",
    "hikari-crescent",
    "python-dotenv",
    "pandas",
    "uvloop",
    "polars>=1.30.0",
    "google-re2>=1.1.20240702",
    "aiosqlite>=0.21.0",
]

[project.scripts]
dw_audit_bot = "bot:main"

[tool.setuptools.packages]
find = {}

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "ruff>=0.11.13",
]

[tool.ruff]
line-length = 120
