[project]
name = "dw_audit_bot"
version = "0.0.1"
requires-python=">=3.12"
dependencies = [
    "hikari",
    "hikari-crescent",
    "python-dotenv",
    "pandas",
    "uvloop",
    "google-re2",
    "aiosqlite",
    "polars",
    "sqlalchemy[asyncio]",
	#"attrs>=25.3.0",
	#"aiohttp>=3.12.13",
	#"aiohappyeyeballs>=2.6.1",
	#"aiosignal>=1.3.2",
	#"colorlog>=6.9.0",
	#"frozenlist>=1.6.0",
	#"idna>=3.10",
	#"multidict>=6.4.4",
	#"numpy>=2.3.0",
	#"propcache>=0.3.1",
	#"python-dateutil>=2.9.0.post0",
	#"pytz>=2025.2",
	#"sigparse>=3.0.0",
	#"six>=1.17.0",
	#"typing-extensions>=4.13.0",
	#"tzdata>=2025.2",
	#"yarl>=1.20.1",
    #"connectorx>=0.4.3",
	#"pyarrow>=20.0.0",
    #"adbc-driver-sqlite>=1.7.0",
]

[project.scripts]
dw_audit_bot = "bot:main"

[tool.setuptools.packages]
find = {}

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "ruff",
]

[tool.ruff]
line-length = 120
