[project]
name = "dw_audit_bot"
version = "0.0.1"
requires-python=">=3.12"
dependencies = [
    "hikari",
    "hikari-crescent",
    "python-dotenv",
    "pandas",
    "uvloop",
    "google-re2",
    "aiosqlite",
    "polars",
    "sqlalchemy[asyncio]",
	"pyarrow",
]

[project.scripts]
dw_audit_bot = "bot:main"

[tool.setuptools.packages]
find = {}

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "ruff",
]

[tool.ruff]
line-length = 120
